--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "calgaryopera",
+    "deeplink": true,
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
